--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
-{
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
-}
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+
+// https://vitejs.dev/config/
+export default defineConfig({
+  plugins: [react()],
+  // Aseguramos que no haya "base" que confunda a Vercel
+  server: {
+    host: true
+  }
+})
