--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "react-router-dom": "^7.12.0",
-    "react": "^19.2.3",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^3.4.0",
-    "react-country-flag": "3.1.0"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-router-dom": "latest",
+    "lucide-react": "latest",
+    "recharts": "latest",
+    "clsx": "latest",
+    "tailwind-merge": "latest",
+    "react-country-flag": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "latest",
+    "@vitejs/plugin-react": "latest",
+    "typescript": "latest",
+    "vite": "latest"
   }
 }
